tests/errors/w_pxd_assign.pxd
cdef double x = 1.0
cdef const double y = 2.0
